--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,15 @@
 .App {
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
 }
 
 .App-logo {
